# KeWoKe

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  audio_recognition.cpp  audio_recognition.hpp  audio_sampling.cpp  audio_sampling.h  hamming_window.hpp  main.cpp  mfcc.h  mfcc_constants.hpp  model.cc  model.h  model_classifier.cc  model_classifier.h  model_functions.cpp  model_functions.hpp  normalize.cpp  normalize.h  ring_buffer.hpp
